--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>New parapraph aded</p>
+    <p>New parapraph added</p>
+    <p>Another paragraph is added</p>
 </body>
 </html>
